--- a/assets/com.microsoft.edit.desktop
+++ b/assets/com.microsoft.edit.desktop
@@ -3,7 +3,7 @@ Type=Application
 Name=Microsoft Edit
 GenericName=Text Editor
 Comment=A simple editor for simple needs
-Icon=edit
+Icon=com.microsoft.edit
 Exec=edit %U
 Terminal=true
 MimeType=text/plain
