--- a/debian/rules
+++ b/debian/rules
@@ -6,17 +6,16 @@ PACKAGE := ms-edit
 	dh $@
 
 override_dh_install:
-
 	cargo build --config .cargo/release.toml --release
-
 	install -d debian/$(PACKAGE)/usr/share/applications/
 	install -d debian/$(PACKAGE)/usr/bin/
 	install -d debian/$(PACKAGE)/etc/
 	install -d debian/$(PACKAGE)/usr/share/doc/$(PACKAGE)
+	install -d debian/$(PACKAGE)/usr/share/metainfo/
 	install -m 644 LICENSE debian/$(PACKAGE)/usr/share/doc/$(PACKAGE)/LICENSE
-	install -m 755  debian/$(PACKAGE)/usr/bin/
 	install -m 644 assets/com.microsoft.edit.desktop debian/$(PACKAGE)/usr/share/applications/
-	install -m 644 assets/edit.svg debian/$(PACKAGE)/usr/share/icons/hicolor/scalable/apps/com.microsoft.edit.svg
-	install -m 755 target/release/edit debian/$(PACKAGE)/usr/bin/
-
+	install -d debian/ms-edit/usr/share/icons/hicolor/scalable/apps/
+	install -m 644 assets/edit.svg debian/ms-edit/usr/share/icons/hicolor/scalable/apps/com.microsoft.edit.svg
+	install -m 755 target/release/edit debian/$(PACKAGE)/usr/bin/edit
+	install -m 644 assets/com.microsoft.edit.metainfo.xml debian/$(PACKAGE)/usr/share/metainfo/com.microsoft.edit.metainfo.xml
 	dh_install
