--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: ms-edit
 Section: misc
 Priority: optional
 Maintainer: Actionschnitzel <actionschnitzel@guideos.de>
-Build-Depends: debhelper (>= 9),bash
+Build-Depends: debhelper (>= 9),bash, rustup
 Standards-Version: 1.0
 Homepage: https://guideos.de
 
