--- a/debian/control
+++ b/debian/control
@@ -2,8 +2,7 @@ Source: ms-edit
 Section: misc
 Priority: optional
 Maintainer: Actionschnitzel <actionschnitzel@guideos.de>
-Build-Depends: debhelper (>= 9),bash, rustup
-Standards-Version: 1.0
+Build-Depends: debhelper (>= 9),bash
 Homepage: https://guideos.de
 
 Package: ms-edit
